[project]
name = "pydb"
version = "0.1.0"
authors = [
    {name = "Derek Garcia"},
]
description = "Util wrapper for writing custom python database interfaces"
readme = "readme.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "python-dotenv==1.2.1",
    "SQLAlchemy==2.0.46"
]

[project.urls]
Homepage = "https://github.com/dlg1206/pydb"
Source = "https://github.com/dlg1206/pydb.git"